Кабинет пользователя - начало

--- a/Cure.DataAccess/Cure.DataAccess.csproj
+++ b/Cure.DataAccess/Cure.DataAccess.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\ChildHideFileBL.cs" />
     <Compile Include="BLL\StopVisitBL.cs" />
     <Compile Include="BLL\StopVisitTypeBL.cs" />
     <Compile Include="BLL\DiagnozBL.cs" />
@@ -64,6 +65,7 @@
     <Compile Include="BLL\OrderBL.cs" />
     <Compile Include="BLL\DepartmentBL.cs" />
     <Compile Include="BLL\CountryBL.cs" />
+    <Compile Include="DAL\ChildHideFileAccess.cs" />
     <Compile Include="DAL\StopVisitAccess.cs" />
     <Compile Include="DAL\StopVisitTypeAccess.cs" />
     <Compile Include="DAL\ChildrenAccess.cs" />
