--- a/Cure.WebSite/Web.config
+++ b/Cure.WebSite/Web.config
@@ -67,7 +67,7 @@
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true">
     </modules>
-    <staticContent>
+    <!--<staticContent>
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
       <mimeMap fileExtension=".m4v" mimeType="video/m4v" />
       <mimeMap fileExtension=".ogg" mimeType="video/ogg" />
@@ -84,6 +84,6 @@
       <mimeMap fileExtension=".eot" mimeType="application/vnd.ms-fontobject" />
       <mimeMap fileExtension=".otf" mimeType="font/otf" />
       <mimeMap fileExtension=".woff" mimeType="font/x-woff" />
-    </staticContent>
+    </staticContent>-->
   </system.webServer>
 </configuration>
