--- a/Cure.WebSite/Cure.WebSite.csproj
+++ b/Cure.WebSite/Cure.WebSite.csproj
@@ -351,6 +351,7 @@
     <Compile Include="Controllers\CabinetController.cs" />
     <Compile Include="Controllers\ChildrenController.cs" />
     <Compile Include="Controllers\BibliotekaController.cs" />
+    <Compile Include="Controllers\FeedbackController.cs" />
     <Compile Include="Controllers\FinanceController.cs" />
     <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Controllers\SevastopolController.cs" />
@@ -492,6 +493,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Feedback\" />
     <Folder Include="Views\Login\" />
     <Folder Include="Views\Post\" />
   </ItemGroup>
