Первая версия новостей с роутингом и главной картинкой, без стилей.

--- a/Cure.WebSite/Cure.WebSite.csproj
+++ b/Cure.WebSite/Cure.WebSite.csproj
@@ -663,6 +663,7 @@
     <Compile Include="Models\ClientContainer.cs" />
     <Compile Include="Models\DocItem.cs" />
     <Compile Include="Models\MyFileViewModel.cs" />
+    <Compile Include="Models\NewsPageModel.cs" />
     <Compile Include="Models\OrderViewModel.cs" />
     <Compile Include="Models\PacientDataSoruce.cs" />
     <Compile Include="Models\PhotoItem.cs" />
@@ -822,6 +823,7 @@
     <Content Include="Views\Procedure\Acupoint.cshtml" />
     <Content Include="Views\News\Index.cshtml" />
     <Content Include="Views\News\_News.cshtml" />
+    <Content Include="Views\News\Details.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
